--- a/styles/site.css
+++ b/styles/site.css
@@ -28,7 +28,7 @@
     height: 100vh;
 }
 
-.pagesection p {
+.playground .pagesection p {
     margin-top: 1em;
 }
 
@@ -659,6 +659,10 @@ img.stubby {
     height: 6em;
 }
 
+.deenoskate {
+    margin-top: 2em;
+}
+
 .dinoskate-container {
     margin-bottom: 4em;
 }
@@ -676,10 +680,40 @@ img.stubby {
     width: fit-content;
 }
 
+.danoskate {
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
+    animation: danoskate 3s infinite;
+    animation-timing-function: ease-in;
+}
+
+.danoskate img {
+    height: 12vh;
+    width: fit-content;
+}
+
+.rollerblades img {
+    height: 4.3vh;
+    width: fit-content;
+}
 
 .dino {
     transform: scaleX(-1);
     margin-top: 2em;
+}
+
+.danoskating {
+    transform: scaleX(-1);
+    margin-top: 4em;
+    position: relative;
+    right: -41vw;
+}
+
+.rollerskate {
+    position: relative;
+    top: -2.2vh;
+    left: 20vw;
 }
 
 .skate {
@@ -742,6 +776,13 @@ img.teddy {
     10% {transform: translate(0,0);}
     30% {transform: translate(2%,0);}
     100% {transform: translate(130%, 0);}
+}
+
+@keyframes danoskate {
+    0%  {transform: translate(110%, 0);}
+    50% {transform: translate(2%,0);}
+    60% {transform: translate(0,0);}
+    100% {transform: translate(-100%,0);}
 }
 
 .divide {
