--- a/styles/site.css
+++ b/styles/site.css
@@ -790,6 +790,36 @@ img.teddy {
     100% {transform: translate(-100%,0);}
 }
 
+.stubbycontainer {
+    margin-top: 12em;
+    margin-bottom: 12em;
+    height: 5em;
+    width: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;;
+}
+
+img.stubbysun {
+    height: 35vh;
+}
+
+.stubbysun {
+    background-color: transparent;
+}
+
+@keyframes stubby {
+    50% {box-shadow:
+        0 0 100px 30px #ff9d3b,  /* inner white */
+        0 0 200px 60px rgb(255, 168, 96), /* middle magenta */
+        0 0 280px 100px rgb(252, 224, 132);}
+}
+
+.stubbycontainer:hover {
+    animation: stubby 6s;
+    background-color: rgb(255, 255, 210);
+}
+
 .divide {
     position: relative;
     margin: auto;
