--- a/styles/site.css
+++ b/styles/site.css
@@ -33,7 +33,7 @@
 }
 
 .smallcontent {
-    width: 50vw;
+    width: 55vw;
     margin: auto;
     overflow-x: hidden;
 }
@@ -487,6 +487,7 @@
 
 .explore h1 {
     animation: bounce 5s infinite;
+    animation-delay: -2s;
 }
 
 .laura {
@@ -709,20 +710,20 @@ img.stubby {
 
 .danoskating {
     transform: scaleX(-1);
-    margin-top: 4em;
+    margin-top: 3.8em;
     position: relative;
     right: -41vw;
 }
 
 .rollerskate {
     position: relative;
-    top: -2.2vh;
-    left: 20vw;
+    top: -3.5vh;
+    left: 17.5vw;
 }
 
 .skate {
     position: relative;
-    top: -8.5vh;
+    top: -9vh;
 }
 
 .skate-ground {
@@ -752,6 +753,16 @@ img.teddy {
     display: flex;
     justify-content: space-between;
     align-items: end;
+}
+
+@keyframes flip {
+    20%,
+    60% {transform: rotate(360deg);}
+
+}
+
+.playground-intro h1 {
+    animation: flip 4s infinite;
 }
 
 @keyframes seesaw {
@@ -791,7 +802,7 @@ img.teddy {
 }
 
 .stubbycontainer {
-    margin-top: 12em;
+    margin-top: 10em;
     margin-bottom: 12em;
     height: 5em;
     width: 3em;
@@ -809,15 +820,30 @@ img.stubbysun {
 }
 
 @keyframes stubby {
-    50% {box-shadow:
-        0 0 100px 30px #ff9d3b,  /* inner white */
-        0 0 200px 60px rgb(255, 168, 96), /* middle magenta */
+    25% {box-shadow:
+        0 0 100px 30px #ff62b3,  /* inner white */
+        0 0 200px 60px rgb(255, 173, 119), /* middle magenta */
         0 0 280px 100px rgb(252, 224, 132);}
+    50% {box-shadow:
+            0 0 100px 30px #ff62b3,  /* inner white */
+            0 0 200px 60px rgb(255, 173, 119), /* middle magenta */
+            0 0 280px 100px rgb(254, 212, 144);}
 }
 
 .stubbycontainer:hover {
-    animation: stubby 6s;
+    animation: stubby 6s infinite;
     background-color: rgb(255, 255, 210);
+}
+
+.grasses {
+    position: relative;
+    top: -10.1em;
+    width: 100%;
+    align-items: center;
+}
+
+img.grass {
+    width: 5em;
 }
 
 .divide {
