--- a/styles/site.css
+++ b/styles/site.css
@@ -705,6 +705,13 @@ a:link {
     100% {transform: translate(0, 4px) rotate(15deg);}
 }
 
+
+.poloroidcollage .poloroid:hover {
+    transform: translate(0, -9px);
+    box-shadow: 1px 1px 5px rgb(117, 67, 75);
+    background-color: rgb(244, 194, 194)
+}
+
 .poloroid.rightside {
     position: relative;
     top: -1em;
@@ -713,6 +720,7 @@ a:link {
 }
 
 .poloroidcollage {
+    padding-top: 15px;
     margin-bottom: 20vh;
 }
 
