--- a/styles/site.css
+++ b/styles/site.css
@@ -11,6 +11,15 @@
     font-style: normal;
   }
 
+.reenie-beanie-regular {
+    font-family: "Reenie Beanie", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+.hidden {
+    display: none;
+}
 
 .body {
     background-color:rgb(243, 210, 216);
@@ -42,8 +51,23 @@
     overflow-x: hidden;
 }
 
+.flex-col {
+    display: flex;
+    /* flex-direction: column; */
+}
+
 .center-block {
     margin: auto;
+}
+
+.center-block-y {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.center-block-x {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .center-flex {
@@ -985,4 +1009,85 @@ img.grass {
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+
+.letter-container .blurb {
+    margin-top: 1em;
+}
+
+.letter-container {
+    margin-top: 7em;
+    height: 90vh;
+}
+
+.envelope-container {
+    width: 40em;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.envelope {
+    height: 15em;
+    width: 100%;
+    border: 3px solid rgb(236, 99, 131);
+    border-radius: 0 0 25px 25px;
+    background-color: white;
+    box-shadow: 5px 5px 5px rgb(247, 211, 184);
+}
+
+.flapheart {
+    position: relative;
+    top: 1.75em;
+    width: 100%;
+    height: 10vh;
+}
+
+.envelope-flap {
+    width: 100%;
+    height: 10vh;
+    clip-path: polygon(0 0, 50% 100%, 100% 0);
+    background-color: pink;
+}
+
+img.heart {
+    z-index: 2;
+    width: 3em;
+    position: relative;
+    top: 7em;
+}
+
+.onhoverflapheart {
+    transform: rotate(180deg);
+    top: 3.25em;
+}
+
+.onhoverenvelope {
+    top: 5em;
+}
+
+.paper {
+    font-family: "Reenie Beanie";
+    padding: 1em;
+    width: 30%;
+    height: fit-content;
+    background-color: rgb(255, 247, 239);
+    border: 1px solid brown;
+    border-radius: 15px;
+    position: absolute;
+    left: 28em;
+    top: 5em;
+    font-size: x-large;
+    box-shadow: 5px 5px 5px rgb(247, 211, 184);
+}
+
+.leftalign {
+    text-align: left;
+    margin-bottom: 0.5em;
+}
+
+.rightalign {
+    text-align: right;
+    margin-bottom: 0.5em;
 }
