--- a/styles/site.css
+++ b/styles/site.css
@@ -1172,7 +1172,7 @@ img.heart {
 
     .dinoskate img {
         height: 7.5vh;
-        /* width: fit-content; */
+        width: auto;
     }
 
     .skate {
@@ -1182,7 +1182,7 @@ img.heart {
 
     .danoskate img {
         height: 6vh;
-        /* width: fit-content; */
+        width: auto;
     }
 
     .rollerblades img.rollerskate {
