playground family portrait animation

--- a/styles/site.css
+++ b/styles/site.css
@@ -758,28 +758,44 @@ a:link {
     width: 100%;
 }
 
+@keyframes stars2 {
+    0% {transform: translate(0, 0) scaleX(-1);}
+    10% {transform: translate(0, -8px) scaleX(-1);}
+    15% {transform: translate(0, 4px) scaleX(-1);}
+    20% {transform: translate(0, 0) scaleX(-1);}
+    100% {transform: translate(0, 0) scaleX(-1);}
+}
+
 img.deeno {
     height: 12em;
     margin-bottom: -1.7em;
-    transform: scaleX(-1);
+    animation: stars2 2s infinite;
+    animation-delay: 150ms;
 }
 
 img.dano {
     margin-left: 1em;
     height: 5em;
-    transform: scaleX(-1);
+    animation: stars2 2s infinite;
+    animation-delay: 750ms;
 }
 
 img.bartholomew {
     height: 10em;
+    animation: stars 2s infinite;
+    animation-delay: 600ms;
 }
 
 img.tedtwo {
     height: 15em;
+    animation: stars 2s infinite;
+    animation-delay: 450ms;
 }
 
 img.stubby {
     height: 6em;
+    animation: stars 2s infinite;
+    animation-delay: 300ms;
 }
 
 .deenoskate-container {
