--- a/styles/site.css
+++ b/styles/site.css
@@ -1235,14 +1235,8 @@ img.heart {
     }
 
     .thisisus {
+        margin-top: 25vh;
         width: 70vw;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .picturesection {
-        margin-top: 0;
     }
 
     .poloroids {
