--- a/styles/site.css
+++ b/styles/site.css
@@ -1053,14 +1053,17 @@ img.grass {
 }
 
 .envelope-container {
+    margin-top: 3em;
     width: 40em;
     height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: end;
+    position: relative;
 }
 
 .envelope {
+    position: absolute;
     height: 15em;
     width: 100%;
     border: 3px solid rgb(236, 99, 131);
@@ -1070,15 +1073,15 @@ img.grass {
 }
 
 .flapheart {
-    position: relative;
-    top: 1.75em;
+    position: absolute;
     width: 100%;
-    height: 10vh;
+    border-top: 3px solid rgb(236, 99, 131);
 }
 
 .envelope-flap {
+    position: absolute;
     width: 100%;
-    height: 10vh;
+    height: 7.5em;
     clip-path: polygon(0 0, 50% 100%, 100% 0);
     background-color: pink;
 }
@@ -1086,13 +1089,14 @@ img.grass {
 img.heart {
     z-index: 2;
     width: 3em;
-    position: relative;
-    top: 7em;
+    position: absolute;
+    top: 6.25em;
+    left: 18.5em;
 }
 
 .onhoverflapheart {
     transform: rotate(180deg);
-    top: 3.25em;
+    /* top: 3.25em; */
 }
 
 .onhoverenvelope {
@@ -1105,16 +1109,17 @@ img.heart {
 }
 
 .paper {
+    z-index: 4;
     font-family: "Reenie Beanie";
-    padding: 1em;
-    width: 30%;
+    padding: 1.25em;
+    width: 60%;
     height: fit-content;
     background-color: rgb(255, 247, 239);
     border: 1px solid brown;
     border-radius: 15px;
     position: absolute;
-    left: 28em;
-    top: 5em;
+    top: -4em;
+    right: -1em;
     font-size: x-large;
     box-shadow: 5px 5px 5px rgb(247, 211, 184);
     animation: papergrow 1s;
@@ -1251,6 +1256,23 @@ img.heart {
 
     .poloroidcollage .poloroid {
         font-size: 1.1em;
+    }
+
+    .paper {
+        z-index: 4;
+        font-family: "Reenie Beanie";
+        padding: 1.5em;
+        width: 50%;
+        height: fit-content;
+        background-color: rgb(255, 247, 239);
+        border: 1px solid brown;
+        border-radius: 15px;
+        position: absolute;
+        top: -4em;
+        right: 2em;
+        font-size: x-large;
+        box-shadow: 5px 5px 5px rgb(247, 211, 184);
+        animation: papergrow 1s;
     }
 
 }
