spacing on mobile letter

--- a/styles/site.css
+++ b/styles/site.css
@@ -1258,6 +1258,10 @@ img.heart {
         font-size: 1.1em;
     }
 
+    .letter-container {
+        margin-top: 15vh;
+    }
+
     .paper {
         z-index: 4;
         font-family: "Reenie Beanie";
@@ -1269,8 +1273,8 @@ img.heart {
         border-radius: 15px;
         position: absolute;
         top: -4em;
-        right: 2em;
-        font-size: x-large;
+        right: 1.75em;
+        font-size: xx-large;
         box-shadow: 5px 5px 5px rgb(247, 211, 184);
         animation: papergrow 1s;
     }
